1-11-19 fixed some layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,9 +127,9 @@ footer {
   padding: 5%;
 }
 
-.pt2 {
-  padding-top: 40px;
-  margin-bottom: 20px;
+footer-content {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 footer p {
@@ -164,20 +164,6 @@ footer p {
   padding-bottom: 20px;
 }
 
-.foote_bottom_ul_amrc {
-  list-style-type: none;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-}
-
-.foote_bottom_ul_amrc li a {
-  color: #999;
-  margin: 0 12px;
-}
-
 .foote_bottom_ul_amrc li a:hover {
   text-decoration: none;
   opacity: 0.6;
@@ -194,7 +180,7 @@ footer p {
 
 .social_footer_ul li {
   padding-top: 10px;
-  margin: 0 10px;
+  margin: 5px 10px;
 }
 
 .social_footer_ul li a {
@@ -222,5 +208,11 @@ footer p {
 }
 
 .footer-col {
-  margin:0 10%;
+  margin:0 6%;
+}
+
+@media only screen and (max-width:500px){
+  col_white_amrc {
+    font-size: 0.8rem;
+  }
 }
